; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_v360.c_flat_to_xyz.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_v360.c_flat_to_xyz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { float* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32, i32, i32, i32, float*)* @flat_to_xyz to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flat_to_xyz(%struct.TYPE_3__* %0, i32 %1, i32 %2, i32 %3, i32 %4, float* %5) #0 {
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca float*, align 8
  %13 = alloca float, align 4
  %14 = alloca float, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store float* %5, float** %12, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load float*, float** %16, align 8
  %18 = getelementptr inbounds float, float* %17, i64 0
  %19 = load float, float* %18, align 4
  %20 = load i32, i32* %8, align 4
  %21 = sitofp i32 %20 to float
  %22 = fmul float 2.000000e+00, %21
  %23 = load i32, i32* %10, align 4
  %24 = sitofp i32 %23 to float
  %25 = fdiv float %22, %24
  %26 = fsub float %25, 1.000000e+00
  %27 = fmul float %19, %26
  store float %27, float* %13, align 4
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load float*, float** %29, align 8
  %31 = getelementptr inbounds float, float* %30, i64 1
  %32 = load float, float* %31, align 4
  %33 = fneg float %32
  %34 = load i32, i32* %9, align 4
  %35 = sitofp i32 %34 to float
  %36 = fmul float 2.000000e+00, %35
  %37 = load i32, i32* %11, align 4
  %38 = sitofp i32 %37 to float
  %39 = fdiv float %36, %38
  %40 = fsub float %39, 1.000000e+00
  %41 = fmul float %33, %40
  store float %41, float* %14, align 4
  %42 = load float, float* %13, align 4
  %43 = load float*, float** %12, align 8
  %44 = getelementptr inbounds float, float* %43, i64 0
  store float %42, float* %44, align 4
  %45 = load float, float* %14, align 4
  %46 = load float*, float** %12, align 8
  %47 = getelementptr inbounds float, float* %46, i64 1
  store float %45, float* %47, align 4
  %48 = load float*, float** %12, align 8
  %49 = getelementptr inbounds float, float* %48, i64 2
  store float -1.000000e+00, float* %49, align 4
  %50 = load float*, float** %12, align 8
  %51 = call i32 @normalize_vector(float* %50)
  ret void
}

declare dso_local i32 @normalize_vector(float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
